--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 streamlit = "1.25.0"
 openai = "0.27.8"
+pydantic = "1.10.12"
+stability-sdk = "0.8.4"
 
 
 [build-system]
