--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ openai = "0.27.8"
 pydantic = "1.10.12"
 stability-sdk = "0.8.4"
 langchain = "0.0.266"
+llama-index = "0.8.5"
+pypdf = "3.15.2"
+nltk = "3.8.1"
 
 
 [build-system]
